k8/ingress_veeam.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veeam-collector-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: veeam-collector.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: veeam-collector
                port:
                  number: 5050
